# model_lpm

./: Cargo.toml  Cargo_junto.toml  README.md  main.rs  main_junto.rs
todo/: fc.csv  salida.txt
todo/src/: main.rs
